--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ author-email = "hello@solokeys.com"
 home-page = "https://github.com/solokeys/solo-python"
 requires-python = ">=3.6"
 requires = [
+  "click",
   "cryptography",
   "ecdsa",
   "fido2",
@@ -25,4 +26,4 @@ classifiers=[
 ]
 
 [tool.flit.scripts]
-solotool = "solo.solotool:main_main"
+solotool = "solo.cli:main_main"
