Start redo of CLI using click

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,5 @@ classifiers=[
 ]
 
 [tool.flit.scripts]
-solotool = "solo.cli:main_main"
+solotool = "solo.solotool:main_main"
+solo = "solo.cli:solo_cli"
