Improve README and declare Python versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,10 @@ classifiers=[
     "License :: OSI Approved :: MIT License",
     "License :: OSI Approved :: Apache Software License",
     "Intended Audience :: Developers",
+    "Intended Audience :: End Users/Desktop",
     "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
 ]
 
 [tool.flit.scripts]
