--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires = [
   "click >= 7.0",
   "cryptography",
   "ecdsa",
-  "fido2",
+  "fido2 == 0.6.0",
   "intelhex",
   "pyserial",
   "pyusb",
