--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ requires = [
   "click >= 7.0",
   "cryptography",
   "ecdsa",
-  "fido2 == 0.7.3",
+  "fido2 >= 0.8",
   "intelhex",
   "pyserial",
   "pyusb",
