final branding corrections, see #20

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "flit.buildapi"
 module = "pynitrokey"
 dist-name = "pynitrokey"
 author = "Nitrokey"
-author-email = "info@nitrokey.com"
+author-email = "pypi@nitrokey.com"
 home-page = "https://github.com/Nitrokey/pynitrokey"
 requires-python = ">=3.6"
 description-file = "README.md"
