--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     executor: win/default
     steps:
       - checkout
-      - run: pip install -r dev-requirements.txt
+      - run: pip install -r ci-requirements.txt
       - run: python win_setup.py bdist_msi
 
   build-linux:
