Prepare for 0.2.0 release under new name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
-
 [build-system]
 requires = ["flit"]
 build-backend = "flit.buildapi"
 
 [tool.flit.metadata]
 module = "solo"
-dist-name = "solo-python"  # Unfortunately, `solo` is in use on PyPI
+dist-name = "solo1"
 author = "SoloKeys"
 author-email = "hello@solokeys.com"
-home-page = "https://github.com/solokeys/solo-python"
+home-page = "https://github.com/solokeys/solo1-cli"
 requires-python = ">=3.6"
 description-file = "README.md"
 requires = [
@@ -29,7 +28,11 @@ classifiers=[
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
 ]
 
 [tool.flit.scripts]
 solo = "solo.cli:solo_cli"
+solo1 = "solo.cli:solo_cli"
